--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -4,7 +4,7 @@
 }
 
 .main-container {
-    position: relative; /* Ensure relative positioning for absolute child elements */
+    position: relative; 
     width: 100%;
     height: 100%;
 }
@@ -28,7 +28,8 @@
     font-size: 80px;
     margin: 0;
     font-family: "Roboto Condensed";
-    font-weight: 250;
+    font-weight: 300;
+    line-height: 92px;
 }
 
 .promp p {
@@ -50,3 +51,4 @@
     font-family: "Roboto Condensed";
     font-weight: bold;
 }
+
