--- a/src/components/OrderPage/OrderPage.css
+++ b/src/components/OrderPage/OrderPage.css
@@ -51,7 +51,7 @@
     display: flex;
 }
 
-.artı-eksi button {
+.artı-eksi button:first-child {
     width: 47px;
     height: 56px;
     border: none;
@@ -59,10 +59,21 @@
     6px 0px 0px 6px;
     background-color: #FDC913;
 }
+
+.artı-eksi button:last-child {
+    width: 47px;
+    height: 56px;
+    border: none;
+    border-radius: 
+    0px 6px 6px 0px;
+    background-color: #FDC913;
+}
+
 .artı-eksi p  {
     width: 47px;
     height: 56px;
-    border: 1px solid grey;
+    border: 1px solid #D9D9D9;
+    border-radius: 1px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -117,4 +128,11 @@
 
 .siparis-notu{
     margin-top: 50px;
+}
+
+.cizgi {
+    width: 100%;
+    border: 1px solid 
+    #5f5f5f7e;
+    margin-top: 20px;
 }
