--- a/src/components/OrderPage/OrderPage.css
+++ b/src/components/OrderPage/OrderPage.css
@@ -9,7 +9,7 @@
 .nasi {
     display: flex;
     justify-content: center;
-    height: 110vh;
+    height: 135vh;
     margin-top: 20px;
 }
 
@@ -126,8 +126,22 @@
 }
 
 .cizgi {
-    width: 100%;
-    border: 1px solid 
-    #5f5f5f7e;
+    width: 30%;
+    border: 1px solid #FAF7F2;
     margin-top: 20px;
+
 }
+
+.gereksiz {
+    background-color: #FAF7F2;
+    display: flex;
+    justify-content: center;
+}
+
+.gereksiz img {
+    width: 581px;
+    height: 270px;
+    margin-top: -80px;
+    clip-path: inset(80px 0 0 0);
+}
+
