--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -32,6 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 50%;
 }
 
 .instagram img {
@@ -58,6 +59,8 @@
     flex-direction: column;
     gap: 1rem;
     margin-bottom: 60px;
+    width: 360px;
+    margin-bottom: 30px;
 }
 
 .adress span img {
@@ -73,4 +76,224 @@
 
 .footer-pizza-hot {
     margin-top: 50px;
+}
+
+.inside-div-footer{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.adress-img {
+    width: 50%;
+    margin-bottom: 30px;
+}
+
+.london {
+    width: 50%;
+}
+
+
+
+
+
+
+@media (max-width: 768px) {
+    .footer-first-div{
+        height: 50rem;
+        display: flex;
+        flex-direction: column;
+    }
+    .inside-div-footer{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .promp {
+        font-size: 40px;
+        line-height: 46px;
+    }
+
+    .aciktim {
+        padding: 10px 30px;
+        font-size: 14px;
+    }
+
+    .secenekler-div {
+        font-size: 16px;
+    }
+
+    .uclu-foto {
+        height: auto;
+    }
+
+    .uclu-foto-first,
+    .uclu-foto-second,
+    .uclu-foto-third {
+        width: 100%;
+        height: 300px;
+    }
+
+    .pizza {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pizza-item {
+        width: 90%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+
+    .pizza-image {
+        width: 100%;
+        height: auto;
+    }
+
+    .footer {
+        height: auto;
+    }
+
+    .copyright {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .instagram, .adress, .footer-pizza-hot {
+        width: 50%;
+        padding: 0 10px;
+        gap: 0;
+    }
+
+    .instagram p {
+        font-size: 18px;
+        line-height: 26px;
+    }
+
+    .footer-pizza-hot p {
+        font-size: 1px;
+        line-height: 22px;
+    }
+    .instagram-div{
+        width: 100%;
+        height: 90vh;
+        
+    }
+    .instagram{
+        margin: 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer-first-div{
+        margin-top: -80px;
+        height: 42rem;
+        display: flex;
+        flex-direction: column;
+    }
+    .promp {
+        font-size: 30px;
+        line-height: 34px;
+    }
+    
+
+    .aciktim {
+        padding: 8px 20px;
+        font-size: 12px;
+    }
+
+    .secenekler-div {
+        font-size: 14px;
+    }
+
+    .uclu-foto {
+        height: auto;
+    }
+
+    .uclu-foto-first,
+    .uclu-foto-second,
+    .uclu-foto-third {
+        width: 100%;
+        height: 250px;
+    }
+
+    .pizza {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pizza-item {
+        width: 90%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+
+    .pizza-image {
+        width: 100%;
+        height: auto;
+    }
+
+    .footer {
+        height: auto;
+    }
+
+    .copyright {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .instagram img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .instagram p {
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .footer-pizza-hot{
+        margin: 0;
+    }
+
+    .footer-pizza-hot:first-child {
+        margin: 0;
+    }
+
+    .footer-pizza-hot p {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .adress span img {
+        height: 20px;
+    }
+    .instagram-div{
+        width: 100%;
+        height: 10vh;
+        margin-top: 5rem;
+    }
+    .instagram{
+        margin: 0;
+        height: 20vh;
+    }
+    .inside-div-footer{
+        width: 100%;
+    }
+    .adress-img {
+        width: 100%;
+    }
+    .london {
+        width: 100%;
+    }
+    .adress {
+        margin: 0;
+    }
+    .instagram p {
+        margin: 5px;
+    }
 }
